# virtual-assistant

./: README.md  pyproject.toml
assistant/: __init__.py  app.py  time_info.py  weather.py  wiki_search.py
assistant/data/: cities.json
